--- a/spring-reddit-clone/pom.xml
+++ b/spring-reddit-clone/pom.xml
@@ -132,6 +132,17 @@ as this is a Kotlin library, we also need Kotlin runtime libraries-->
 			<version>${kotlin.version}</version>
 			<scope>test</scope>
 		</dependency>
+		<!-- Spring Fox Dependencies -->
+		<dependency>
+			<groupId>io.springfox</groupId>
+			<artifactId>springfox-swagger2</artifactId>
+			<version>2.9.2</version>
+		</dependency>
+		<dependency>
+			<groupId>io.springfox</groupId>
+			<artifactId>springfox-swagger-ui</artifactId>
+			<version>2.9.2</version>
+		</dependency>
 	</dependencies>
 
 	<build>
